# auto-vid-gen

./: kaggle_s6e2_eda.ipynb  main.py  main_g_code.py  pyproject.toml  trial.py
